--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "fastify": "^4.26.1",
     "jsonwebtoken": "^9.0.2",
     "postgres": "^3.4.3"
