--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fastify/cors": "^9.0.1",
     "fastify": "^4.26.1",
     "jsonwebtoken": "^9.0.2",
-    "postgres": "^3.4.3"
+    "postgres": "^3.4.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "dotenv": "^16.4.5"
