--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@fastify/multipart": "^8.2.0",
     "csvtojson": "^2.0.10",
     "fastify": "^4.26.1",
-    "fastify-file-upload": "^4.0.0",
+    "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "postgres": "^3.4.3",
     "xlsx": "^0.18.5"
