--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node --watch --no-warnings src/server.js"
+    "start": "node --watch --no-warnings src/server.js"
   },
   "keywords": [],
   "author": "",
